correct label updated

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <input type="text" id="reel_url" placeholder="Enter Instagram Reel URL">
     <button onclick="submitReel()">Submit</button>
 
-    <h3>Latest Processed Reel</h3>
+    <h3>Latest Posted Reel</h3>
     <video id="latestVideo" controls>
         <source id="videoSource" src="" type="video/mp4">
         Your browser does not support the video tag.
